# main_banking_project

./: .coverage  .env.example  .gitignore  README.md  error_log.txt  pyproject.toml  requirements.txt  test_log.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_7c89701cc971e615___init___py.html  z_7c89701cc971e615_decorators_py.html  z_7c89701cc971e615_external_api_py.html  z_7c89701cc971e615_generators_py.html  z_7c89701cc971e615_masks_py.html  z_7c89701cc971e615_processing_py.html  z_7c89701cc971e615_utils_py.html  z_7c89701cc971e615_widget_py.html
scr/: decorators.py  generators.py  masks.py  processing.py  utils.py  widget.py
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decoratiors.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
tests_data/: test_operations.json  test_transactions.csv  test_transactions_excel.xlsx
